Fixed front page scrolling and nav alignment.

--- a/src/components/MtG/MtGRando/styles.module.scss
+++ b/src/components/MtG/MtGRando/styles.module.scss
@@ -9,10 +9,12 @@
 
   .left-col {
     flex: 3;
+    margin-right: $gutter;
   }
 
   .right-col {
     flex: 1;
+    margin-left: $gutter;
   }
 }
 
